--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "node-update": "npm i --save-dev node@16 && npm config set prefix=$(pwd)/node_modules/node && export PATH=$(pwd)/node_modules/node/bin:$PATH",
-    "node-clean": "rm -rf node_modules && rm package-lock.json && npm cache clear --force && npm cache clean --force && npm i",
-    "node-update-then-clean": "npm run node-update && npm run node-clean"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "tamamo",
+  "license": "MIT",
   "devDependencies": {
     "node": "^16.6.1"
   },
