--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DISCORD_BOT_TOKEN='NzMxMzk5NzgwMzgyODAxOTQx.XwlfIA.-AuEr_SqdHfDb1EP4hTz79uyEGI'
+DISCORD_BOT_TOKEN='Njc2MDgxNTQwNjIyNzEyODUy.XkAgAA.SmYnB3cCokH1wCG_OHkkJyeqVxE'
 DB_HOST='ec2-52-3-60-53.compute-1.amazonaws.com'
 DB_DATBASE='d3atsuktl0v0d3'
 DB_USER='pgsgheqcocohfr'
